tests/snapshots/cli__run_tests@Invalid.gleam.snap
---
source: tests/cli.rs
expression: "run_sgleam_cmd(&[\"-t\", path.as_os_str().to_str().expect(\"a valid path\")],\nNone)"
input_file: tests/inputs/Invalid.gleam
---
Running tests...
0 tests, 0 success(es), 0 failure(s) and 0 error(s).
