tests/snapshots/cli__run_tests@approx.gleam.snap
---
source: tests/cli.rs
expression: "run_sgleam_cmd(&[\"-t\", path.as_os_str().to_str().unwrap()], None)"
input_file: tests/inputs/approx.gleam
---
Running tests...
Failure at approx.approx_examples:5
  Actual   : 1.2
  Expected : 1.1
  Tolerance: 0.01
3 tests, 2 success(es), 1 failure(s) and 0 error(s).
